[gd_scene load_steps=7 format=3 uid="uid://b86yo2tp58162"]

[ext_resource type="Script" uid="uid://dws03tpiyfevr" path="res://UI/Main/Main.gd" id="1_k638e"]
[ext_resource type="Theme" uid="uid://b0tmnq5iqqibt" path="res://Assets/Common.tres" id="2_iyolv"]
[ext_resource type="Theme" uid="uid://nrcq1sdpd77o" path="res://Assets/ButtonAccept.tres" id="3_ls3py"]
[ext_resource type="Script" uid="uid://2xi3gw7iu7nf" path="res://Tools/Themes.gd" id="4_hacm1"]
[ext_resource type="PackedScene" uid="uid://qwp50boajvxv" path="res://UI/Main/SlideMenu/SlideMenu.tscn" id="5_eiwjv"]

[sub_resource type="LabelSettings" id="LabelSettings_edq8m"]
font_size = 32

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Main" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.117647, 0.117647, 0.168627, 1)
script = ExtResource("1_k638e")

[node name="ProjectListGrid" type="GridContainer" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -256.0
offset_right = 320.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 16

[node name="ScreenTitle" type="Label" parent="Main/ProjectListGrid"]
layout_mode = 2
text = "Projects"
label_settings = SubResource("LabelSettings_edq8m")

[node name="SearchGrid" type="GridContainer" parent="Main/ProjectListGrid"]
layout_mode = 2
theme_override_constants/h_separation = 16
columns = 3

[node name="SearchBox" type="LineEdit" parent="Main/ProjectListGrid/SearchGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../SortMode")
theme = ExtResource("2_iyolv")
placeholder_text = "Type search query..."

[node name="SortMode" type="OptionButton" parent="Main/ProjectListGrid/SearchGrid"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../SearchBox")
focus_neighbor_right = NodePath("../SearchButton")
focus_mode = 0
theme = ExtResource("2_iyolv")
selected = 0
item_count = 3
popup/item_0/text = "Find: Title"
popup/item_0/id = 0
popup/item_1/text = "Find: Details"
popup/item_1/id = 1
popup/item_2/text = "Find: Card #"
popup/item_2/id = 2

[node name="SearchButton" type="Button" parent="Main/ProjectListGrid/SearchGrid"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../SortMode")
focus_mode = 0
theme = ExtResource("2_iyolv")
text = "Search
"

[node name="ClearButton" type="Button" parent="Main/ProjectListGrid/SearchGrid"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("2_iyolv")
text = "clear"

[node name="OptionButton" type="OptionButton" parent="Main/ProjectListGrid"]
visible = false
layout_mode = 2
theme = ExtResource("2_iyolv")
selected = 0
item_count = 2
popup/item_0/text = "Incomplete Projects"
popup/item_0/id = 0
popup/item_1/text = "Finished Projects"
popup/item_1/id = 1

[node name="ProjectList" type="ItemList" parent="Main/ProjectListGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("2_iyolv")

[node name="NewProject" type="Button" parent="Main/ProjectListGrid"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme = ExtResource("3_ls3py")
text = "+ New Project"
expand_icon = true

[node name="MarginsRight" type="MarginContainer" parent="Main"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -97.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="LinkButton" type="LinkButton" parent="Main/MarginsRight"]
layout_mode = 2
text = "Source Code"
uri = "https://github.com/Laserology/lbry-2/"

[node name="MarginsLeft" type="MarginContainer" parent="Main"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -63.0
offset_right = 145.0
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ThemeSelector" type="OptionButton" parent="Main/MarginsLeft"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_iyolv")
selected = 0
item_count = 3
popup/item_0/text = "Dark"
popup/item_0/id = 0
popup/item_1/text = "Light"
popup/item_1/id = 2
popup/item_1/disabled = true
popup/item_2/text = "Terracotta"
popup/item_2/id = 1
script = ExtResource("4_hacm1")

[node name="SlideMenu" parent="." instance=ExtResource("5_eiwjv")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1280.0
offset_right = 2560.0
offset_bottom = 720.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="Main/ProjectListGrid/SearchGrid/SearchButton" to="Main" method="SearchClicked"]
[connection signal="pressed" from="Main/ProjectListGrid/SearchGrid/ClearButton" to="Main" method="ClearPressed"]
[connection signal="item_selected" from="Main/ProjectListGrid/ProjectList" to="Main" method="ListItemselected"]
[connection signal="pressed" from="Main/ProjectListGrid/NewProject" to="Main" method="NewProject"]
[connection signal="item_selected" from="Main/MarginsLeft/ThemeSelector" to="Main/MarginsLeft/ThemeSelector" method="ThemeSelected"]
